--- a/package.json
+++ b/package.json
@@ -12,6 +12,9 @@
     "d3": "^7.9.0",
     "dagre": "^0.8.5",
     "framer-motion": "^12.23.24",
+    "html-to-image": "^1.11.13",
+    "html2canvas": "^1.4.1",
+    "jspdf": "^3.0.3",
     "next": "16.0.1",
     "react": "19.2.0",
     "react-dom": "19.2.0",
